2006-12-30  Lluis Sanchez  <lluis@ximian.com>

	* worker/bloggers.xml: I have a new blog URL.

2006-12-29  Jackson Harper  <jackson@ximian.com>

	* worker/bloggers.xml: I have a new blog URL.

2006-12-10  Aaron Bockover  <abockover@novell.com>

	* worker/bloggers.xml: Added Patrick van Staveren

2006-12-07  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* worker/bloggers.xml: Changed my blog address once again (maybe it
	will work this time).

2006-12-04  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* worker/bloggers.xml: Changed my blog address.

2006-11-06  Aaron Bockover  <abockover@novell.com>

	* worker/bloggers.xml: Added Boyd Timothy

2006-10-20  C.J. Adams-Collier <cjcollier@colliertech.org>
	* worker/blogger.xml
	- added Rafael Ferreira

2006-10-14  C.J. Adams-Collier <cjcollier@colliertech.org>

	* worker/bloggers.xml
	- Added monocast
	- long lines ( > 80 chars ) suck.
	* www/images/heads/monocast.png
	- Added monocast icon

2006-10-13  Joe Shaw  <joeshaw@novell.com>

	* worker/bloggers.xml: Added myself.
	* www/images/heads/joe.png: Added head

2006-10-04	Boris Kirzner	<borisk@mainsoft.com>

	* worker/bloggers.xml, www/images/heads/borisk.png: added head.

2006-09-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: set the error status when we have a
	cached feed that failed.

2006-09-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* www/images/error.png:
	* worker/monologue-worker.cs:
	* worker/default.tpl: display an error icon and message for feeds that
	fail to be downloaded/parsed.

2006-09-16	Christian Hergert	<christian.hergert@gmail.com>

	* www/images/heads/vwdude.png: moved from chrish01.png
	* www/images/heads/chrish01.png: moved
	* worker/bloggers.xml: use new irc handle

2006-09-13  C.J. Adams-Collier  <cjcollier@colliertech.org>

	* worker/bloggers.xml: Changed to my new name

2006-09-06  Aaron Bockover  <abockover@novell.com>

	* worker/bloggers.xml: Added Gabriel Burt's feed
