@@ -1,3 +1,8 @@
+2007-01-25  Alexandre Gomes  <alexmipego@gmail.com>
+
+	* worker/monologue-worker.cs: Fixes a problem when servers return
+	empty feeds with HTTP OK status.
+
 2006-12-30  Lluis Sanchez  <lluis@ximian.com>
 
 	* worker/bloggers.xml: I have a new blog URL.
